--- a/styles/fruit.css
+++ b/styles/fruit.css
@@ -1,19 +1,45 @@
  .team-sec{
     background-image: url('../images/team.png');
     background-color:  rgba(18, 18, 18, 0.70);
-    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-blend-mode: darken;
 }
-.svg{
-    background-image: ;
+
+/* #slide4{
+    background-image: url('../images/banner4.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color:rgba(18, 18, 18, 0.70); 
+    background-blend-mode: darken;
 }
 
-/* .team-sec::after{
-  content: '';
-  position: absolute;
-  width: 100%;
-  background-color: rgba(18, 18, 18, 0.70);
+#slide3{
+    background-image: url('../images/banner3.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color:rgba(18, 18, 18, 0.70); 
+    background-blend-mode: darken;
 
-}  */
+}
+
+#slide2{
+    background-image: url('../images/banner2.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color:rgba(18, 18, 18, 0.70); 
+    background-blend-mode: darken;
+    b
+}
+
+#slide1{
+    background-image: url('../images/banner1.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color:rgba(18, 18, 18, 0.70); 
+    background-blend-mode: darken;
+} */
